--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "typecheck": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["jotai", "react", "state-management"],
+  "keywords": [
+    "jotai",
+    "react",
+    "state-management"
+  ],
   "author": "boaris <boriszubc@gmail.com>",
-  "contributors": ["Boaris (https://github.com/boar-is)"],
+  "contributors": [
+    "Boaris (https://github.com/boar-is)"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/boar-is/jotai-components.git"
+    "url": "git+https://github.com/boar-is/jotai-components.git"
   },
   "source": "./src/index.ts",
   "main": "./dist/index.js",
