--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jotai-components",
   "type": "module",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Jōtai utilities to reduce React boilerplate 👻⚛",
   "scripts": {
     "dev": "tsup --watch",
@@ -22,6 +22,7 @@
   "source": "./src/index.ts",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": ["dist"],
   "sideEffects": false,
   "license": "MIT",
   "devDependencies": {
