--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "peerDependencies": {
     "@types/react": ">=17.0.0",
+    "@types/react-dom": ">=17.0.0",
     "react": ">=17.0.0",
     "jotai": ">=2.0.0"
   },
