--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "jotai-components",
   "type": "module",
-  "version": "0.1.2",
+  "version": "0.1.1",
   "description": "Jōtai utilities to reduce React boilerplate 👻⚛",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
     "typecheck": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "lefthook install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["jotai", "react", "state-management"],
   "author": "boaris <boriszubc@gmail.com>",
