--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tsup --watch",
     "build": "tsup",
     "typecheck": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": ["jotai", "react", "state-management"],
   "author": "boaris <boriszubc@gmail.com>",
@@ -27,13 +27,19 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.3",
     "jotai": "^2",
+    "jsdom": "^25.0.1",
     "lefthook": "^1",
     "react": "^18",
     "tsup": "^8",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.1.3"
   },
   "peerDependencies": {
     "@types/react": ">=17.0.0",
